[package]
name = "playlist-replacer"
version = "0.1.0"
authors = ["Kishan <kishansambhi@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "^0.8.0"
text_io = "0.1.8"
prettytable-rs = "^0.8"